website: update screens, fix page on tablet/mobile
git-svn-id: file:///var/kolibrios-org-repos@36 ae7b2cb0-843d-483b-9e9e-b8a90ea88d30

--- a/style.css
+++ b/style.css
@@ -241,6 +241,7 @@ td {
     z-index: 10;
     color: #fff;
     text-shadow: 1px 1px 0 #111111;
+    pointer-events: none;
 }
 
 iframe {
@@ -249,6 +250,15 @@ iframe {
 
 
 /*   Adaptive coding   */
+
+@media (max-width:1280px) {
+	#show {
+		margin-left: none;
+		border-radius: 0;
+		left: 0;
+		top: 55px;
+	}
+}
 
 @media (max-width:864px) {
 	#article, #footer, #screen, #show, #menu {
